// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test.js - {"embeddedLanguageFormatting":"off"} format 1`] = `
====================================options=====================================
embeddedLanguageFormatting: "off"
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
css\`a { }\`

md\`\`

graphql(\`{id}\`)

html\`<a>\`

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`]
})
class TestComponent {}

=====================================output=====================================
css\`a { }\`;

md\`\`;

graphql(\`{id}\`);

html\`<a>\`;

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`],
})
class TestComponent {}

================================================================================
`;

exports[`test.js - {"trailingComma":"es5"} format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
trailingComma: "es5"
                                                                                | printWidth
=====================================input======================================
css\`a { }\`

md\`\`

graphql(\`{id}\`)

html\`<a>\`

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`]
})
class TestComponent {}

=====================================output=====================================
css\`
  a {
  }
\`;

md\`

\`;

graphql(
  \`
    {
      id
    }
  \`
);

html\`<a></a>\`;

@Component({
  template: \`<a></a>\`,
  styles: [
    \`
      a {
      }
    \`,
  ],
})
class TestComponent {}

================================================================================
`;

exports[`test.js format 1`] = `
====================================options=====================================
parsers: ["babel"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
css\`a { }\`

md\`\`

graphql(\`{id}\`)

html\`<a>\`

@Component({
  template: \`<a>\`,
  styles: [\`a { }\`]
})
class TestComponent {}

=====================================output=====================================
css\`
  a {
  }
\`;

md\`

\`;

graphql(
  \`
    {
      id
    }
  \`,
);

html\`<a></a>\`;

@Component({
  template: \`<a></a>\`,
  styles: [
    \`
      a {
      }
    \`,
  ],
})
class TestComponent {}

================================================================================
`;
